============================================================
Changes across different versions
============================================================
------------------------------------------------------------
Version 0.1.1
------------------------------------------------------------
* renamed parameter angle to text.angle
* removed colour from outline of common angle ribbons
* order of variables considered in drawing ribbons for hammock plots